src/compiler/src/main/kotlin/Parser.kt
package com.godel.compiler

object Parser : ParserBase() {
    override val start = ::parseProgram

    enum class InnerNodeType : NodeType {
        Program, Statements, Statement, Declaration, ValDeclaration, ValDeclarationRest, Type, FunctionalOrNullableType, TypeStar, TypeStarRest, TypeArgumentsOptional, TypeArguments, TypeArgumentsContent, TypeNamedArgumentsOptional, TypeArgumentsContentRest, TypeParameters, TypeParametersNamesPlus, TypeParametersInheritanceOptional, TypeParametersNamesPlusRest, QuestionMarkOptional, ParenthesizedExpression, PaddedExpression, Expression, SimpleExpression, BooleanLiteral, Number, NumberRest, DecimalLiteralOrMemberAccess, MemberAccessWithoutFirstDot, StringLiteral, AnythingButApostrophes, AnythingEndsWithApostrophes, IfExpression, IfExpressionRest, ElseExpression, ClassDeclaration, MemberDeclarationStar, MemberDeclarationStarRest, MemberDeclaration, MemberDeclarationRest, PrivateOrPublic, ElvisExpression, ReturnExpression, InfixExpression, DisjunctionExpression, ConjunctionExpression, EqualityOperator, EqualityExpression, ComparisonOperator, ComparisonExpression, AdditiveOperator, AdditiveExpression, MultiplicativeOperator, MultiplicativeExpression, DotOrQuestionedDot, MemberAccess, Invocation, InvocationArgumentsStar, InvocationArguments, ArgumentStar, NamedArgumentPostfixOptional, ArgumentStarRest, SimpleOrParenthesizedExpression, FunctionDeclaration, ReturnTypeOptional, FunctionParameters, FunctionParameterStar, FunctionParameterStarRest, FunctionParameter, StatementOrBlock, Block, Lambda, LambdaParametersStar, LambdaParametersRest, WhiteSpaceOrBreakLine, SpaceStar, SpacePlus, WhitespaceStar, WhitespacePlus, SEMI, SEMIRest, SEMIOptional, SemiColonOptional
    }

    private fun parseProgram(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Program
        val (child0, nextToken1) = parseSpaceStar(nextToken0, restOfTokens)
        val (child1, nextToken2) = parseStatements(nextToken1, restOfTokens)
        val (child2, nextToken3) = parseSpaceStar(nextToken2, restOfTokens)
        return ParseTreeNodeResult(
            ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
            nextToken3
        )
    }

    private fun parseStatements(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Statements
        return if (nextToken0 in setOf(TokenType.DecimalLiteral, TokenType.Apostrophes, TokenType.SimpleName, TokenType.Hash, TokenType.OpenParenthesis) || nextToken0 in setOf(Keyword.If, Keyword.Else, Keyword.Return, Keyword.False, Keyword.True, Keyword.Val, Keyword.Class, Keyword.Fun)) {
            val (child0, nextToken1) = parseStatement(nextToken0, restOfTokens)
            when (nextToken1) {
                in setOf(TokenType.WhiteSpace) -> {
                    val (child1, nextToken2) = parseWhitespacePlus(nextToken1, restOfTokens)
                    val (child2, nextToken3) = parseSEMI(nextToken2, restOfTokens)
                    val (child3, nextToken4) = parseStatements(nextToken3, restOfTokens)
                    ParseTreeNodeResult(
                        ParseTreeNode.Inner(listOf(child0, child1, child2, child3), nodeType),
                        nextToken4
                    )
                }
                in setOf(TokenType.WhiteSpace, TokenType.BreakLine, TokenType.SemiColon) -> {
                    val (child1, nextToken2) = parseSEMI(nextToken1, restOfTokens)
                    val (child2, nextToken3) = parseStatements(nextToken2, restOfTokens)
                    ParseTreeNodeResult(
                        ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                        nextToken3
                    )
                }
                else -> {
                    ParseTreeNodeResult(
                        ParseTreeNode.Inner(listOf(child0), nodeType),
                        nextToken1
                    )
                }
            }
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseStatement(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Statement
        return if (nextToken0 in setOf(TokenType.DecimalLiteral, TokenType.Apostrophes, TokenType.SimpleName, TokenType.Hash, TokenType.OpenParenthesis) || nextToken0 in setOf(Keyword.If, Keyword.Else, Keyword.Return, Keyword.False, Keyword.True)) {
            val (child0, nextToken1) = parseExpression(nextToken0, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0), nodeType),
                nextToken1
            )
        } else if (nextToken0 in setOf(Keyword.Val, Keyword.Class, Keyword.Fun)) {
            val (child0, nextToken1) = parseDeclaration(nextToken0, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0), nodeType),
                nextToken1
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseDeclaration(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Declaration
        return when (nextToken0) {
            in setOf(Keyword.Val) -> {
                val (child0, nextToken1) = parseValDeclaration(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            in setOf(Keyword.Class) -> {
                val (child0, nextToken1) = parseClassDeclaration(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            in setOf(Keyword.Fun) -> {
                val (child0, nextToken1) = parseFunctionDeclaration(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            else -> throw CompilationError("not matching alternative for nextToken.")
        }
    }

    private fun parseValDeclaration(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.ValDeclaration
        return if (nextToken0 in setOf(Keyword.Val)) {
            val (child0, nextToken1) = parseToken(Keyword.Val).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpacePlus(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseToken(TokenType.SimpleName).invoke(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseValDeclarationRest(nextToken4, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4), nodeType),
                nextToken5
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseValDeclarationRest(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.ValDeclarationRest
        return if (nextToken0 in setOf(TokenType.Colon)) {
            val (child0, nextToken1) = parseToken(TokenType.Colon).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseType(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseToken(TokenType.Assignment).invoke(nextToken4, restOfTokens)
            val (child5, nextToken6) = parsePaddedExpression(nextToken5, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4, child5), nodeType),
                nextToken6
            )
        } else if (nextToken0 in setOf(TokenType.Assignment)) {
            val (child0, nextToken1) = parseToken(TokenType.Assignment).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parsePaddedExpression(nextToken1, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1), nodeType),
                nextToken2
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseType(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Type
        return if (nextToken0 in setOf(TokenType.SimpleName)) {
            val (child0, nextToken1) = parseToken(TokenType.SimpleName).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseTypeArgumentsOptional(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseQuestionMarkOptional(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else if (nextToken0 in setOf(TokenType.OpenParenthesis)) {
            val (child0, nextToken1) = parseToken(TokenType.OpenParenthesis).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeStar(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseToken(TokenType.CloseParenthesis).invoke(nextToken4, restOfTokens)
            val (child5, nextToken6) = parseWhitespaceStar(nextToken5, restOfTokens)
            val (child6, nextToken7) = parseFunctionalOrNullableType(nextToken6, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4, child5, child6), nodeType),
                nextToken7
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseFunctionalOrNullableType(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.FunctionalOrNullableType
        return when (nextToken0) {
            in setOf(TokenType.RightArrow) -> {
                val (child0, nextToken1) = parseToken(TokenType.RightArrow).invoke(nextToken0, restOfTokens)
                val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
                val (child2, nextToken3) = parseType(nextToken2, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                    nextToken3
                )
            }
            in setOf(TokenType.QuestionMark) -> {
                val (child0, nextToken1) = parseToken(TokenType.QuestionMark).invoke(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            else -> {
                ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
            }
        }
    }

    private fun parseTypeStar(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeStar
        return if (nextToken0 in setOf(TokenType.SimpleName, TokenType.OpenParenthesis)) {
            val (child0, nextToken1) = parseType(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeStarRest(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeStarRest(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeStarRest
        return if (nextToken0 in setOf(TokenType.Comma)) {
            val (child0, nextToken1) = parseToken(TokenType.Comma).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeStar(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeArgumentsOptional(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeArgumentsOptional
        return if (nextToken0 in setOf(TokenType.OpenBrokets)) {
            val (child0, nextToken1) = parseTypeArguments(nextToken0, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0), nodeType),
                nextToken1
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeArguments(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeArguments
        return if (nextToken0 in setOf(TokenType.OpenBrokets)) {
            val (child0, nextToken1) = parseToken(TokenType.OpenBrokets).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeArgumentsContent(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseToken(TokenType.CloseBrokets).invoke(nextToken3, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3), nodeType),
                nextToken4
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseTypeArgumentsContent(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeArgumentsContent
        return if (nextToken0 in setOf(TokenType.SimpleName, TokenType.OpenParenthesis)) {
            val (child0, nextToken1) = parseType(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeNamedArgumentsOptional(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseTypeArgumentsContentRest(nextToken4, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4), nodeType),
                nextToken5
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseTypeNamedArgumentsOptional(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeNamedArgumentsOptional
        return if (nextToken0 in setOf(TokenType.Assignment)) {
            val (child0, nextToken1) = parseToken(TokenType.Assignment).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseType(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeArgumentsContentRest(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeArgumentsContentRest
        return if (nextToken0 in setOf(TokenType.Comma)) {
            val (child0, nextToken1) = parseToken(TokenType.Comma).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeArgumentsContent(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeParameters(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeParameters
        return if (nextToken0 in setOf(TokenType.OpenBrokets)) {
            val (child0, nextToken1) = parseToken(TokenType.OpenBrokets).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeParametersNamesPlus(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseToken(TokenType.CloseBrokets).invoke(nextToken4, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4), nodeType),
                nextToken5
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeParametersNamesPlus(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeParametersNamesPlus
        return if (nextToken0 in setOf(TokenType.SimpleName)) {
            val (child0, nextToken1) = parseToken(TokenType.SimpleName).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeParametersInheritanceOptional(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseTypeParametersNamesPlusRest(nextToken3, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3), nodeType),
                nextToken4
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parseTypeParametersInheritanceOptional(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeParametersInheritanceOptional
        return if (nextToken0 in setOf(TokenType.Colon)) {
            val (child0, nextToken1) = parseToken(TokenType.Colon).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseType(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseTypeParametersNamesPlusRest(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.TypeParametersNamesPlusRest
        return if (nextToken0 in setOf(TokenType.Comma)) {
            val (child0, nextToken1) = parseToken(TokenType.Comma).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseTypeParametersNamesPlus(nextToken2, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
                nextToken3
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseQuestionMarkOptional(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.QuestionMarkOptional
        return if (nextToken0 in setOf(TokenType.QuestionMark)) {
            val (child0, nextToken1) = parseToken(TokenType.QuestionMark).invoke(nextToken0, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0), nodeType),
                nextToken1
            )
        } else {
            ParseTreeNodeResult(ParseTreeNode.EpsilonLeaf(nodeType), nextToken0)
        }
    }

    private fun parseParenthesizedExpression(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.ParenthesizedExpression
        return if (nextToken0 in setOf(TokenType.OpenParenthesis)) {
            val (child0, nextToken1) = parseToken(TokenType.OpenParenthesis).invoke(nextToken0, restOfTokens)
            val (child1, nextToken2) = parseSpaceStar(nextToken1, restOfTokens)
            val (child2, nextToken3) = parseExpression(nextToken2, restOfTokens)
            val (child3, nextToken4) = parseSpaceStar(nextToken3, restOfTokens)
            val (child4, nextToken5) = parseToken(TokenType.CloseParenthesis).invoke(nextToken4, restOfTokens)
            ParseTreeNodeResult(
                ParseTreeNode.Inner(listOf(child0, child1, child2, child3, child4), nodeType),
                nextToken5
            )
        } else throw CompilationError("not matching alternative for nextToken.")
    }

    private fun parsePaddedExpression(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.PaddedExpression
        val (child0, nextToken1) = parseSpaceStar(nextToken0, restOfTokens)
        val (child1, nextToken2) = parseExpression(nextToken1, restOfTokens)
        val (child2, nextToken3) = parseWhitespaceStar(nextToken2, restOfTokens)
        return ParseTreeNodeResult(
            ParseTreeNode.Inner(listOf(child0, child1, child2), nodeType),
            nextToken3
        )
    }

    private fun parseExpression(nextToken0: Token?, restOfTokens: Iterator<Token>): ParseTreeNodeResult {
        val nodeType = InnerNodeType.Expression
        return when (nextToken0) {
            in setOf(Keyword.If) -> {
                val (child0, nextToken1) = parseIfExpression(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            in setOf(Keyword.Else) -> {
                val (child0, nextToken1) = parseElseExpression(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            in setOf(TokenType.DecimalLiteral, TokenType.Apostrophes, TokenType.SimpleName, TokenType.Hash, TokenType.OpenParenthesis),
            in setOf(Keyword.Return, Keyword.False, Keyword.True) -> {
                val (child0, nextToken1) = parseElvisExpression(nextToken0, restOfTokens)
                ParseTreeNodeResult(
                    ParseTreeNode.Inner(listOf(child0), nodeType),
                    nextToken1
                )
            }
            else -> throw CompilationError("not matching alternative for nextToken.")
        }
    }
